# daveyutils

./: .gitignore  Makefile  README.md  batch_makemkvcon.sh  bisect_img.sh  mkvpropedit_set_name.sh
.github/workflows/: nudge-rs.yml  tests.yml
docs/superpowers/plans/: 2026-07-13-media-scripts-cleanup.md  2026-07-13-nudge-rust-cli.md  2026-07-13-nudge-rust-core.md  2026-07-13-nudge-rust-daemon-foundation.md  2026-07-13-nudge-rust-packaging.md  2026-07-13-nudge-rust-register.md  2026-07-13-nudge-rust-scheduler.md  2026-07-13-nudge-rust-tmux-inject.md  2026-07-15-fix-bash-correctness.md  2026-07-15-fix-critical-data-loss.md  2026-07-15-fix-minors-and-infra.md  2026-07-15-fix-rust-correctness.md
docs/superpowers/reviews/: 2026-07-15-whole-repo-review-findings.md
docs/superpowers/specs/: 2026-07-13-nudge-rust-rewrite-design.md  2026-07-15-verify-recency-design.md
mkvedit/: Cargo.toml
nudge-rs/: Cargo.toml  README.md
nudge-rs/src/: app.rs  cli.rs  config.rs  daemon.rs  detect.rs  inject.rs  job.rs  lib.rs  main.rs  notify.rs  paths.rs  queue.rs  scheduler.rs  timespec.rs  tmux_panes.rs  verify.rs
nudge-rs/src/ipc/: client.rs  mod.rs  server.rs
nudge-rs/src/register/: launchd.rs  mod.rs  systemd.rs
nudge-rs/src/tui/: exec.rs  fuzzy.rs  mod.rs  model.rs  update.rs  view.rs
nudge-rs/tests/: cli_daemon_log.rs  cli_daemon_serve_fatal.rs  cli_daemon_version.rs  cli_dashboard_fallback.rs  cli_edit_atomic.rs  cli_jobs.rs  cli_no_daemon.rs  cli_patterns.rs  cli_schedule.rs  daemon_fire.rs  daemon_ipc.rs  daemon_singleton.rs  ipc_replace.rs  ipc_socket.rs  ipc_timeout.rs  paths_sun_len.rs  tmux_e2e.rs
nudge-rs/tests/common/: mod.rs
packaging/aur/nudge/: PKGBUILD
packaging/aur/nudge-git/: PKGBUILD
packaging/homebrew/: nudge.rb
scripts/: batch_img2pdf  batch_img2pdf.sh  batch_makemkvcon  bisect_img  cue2flac  mkvpropedit_set_name  nudge  video_pcm_to_flac  video_pcm_to_flac.fish
tests/: README.md  assert.sh  lib.sh  run.sh  test_assert.sh  test_batch_img2pdf.sh  test_batch_makemkvcon.sh  test_bisect_img.sh  test_cue2flac.sh  test_e2e_at_hygiene.sh  test_e2e_tmux.sh  test_helpers.sh  test_jobs.sh  test_jobs_e2e.sh  test_jobs_e2e_skip.sh  test_mkvpropedit_set_name.sh  test_resolution.sh  test_video_pcm_to_flac.sh
