[package]
name = "nudge"
version = "0.1.0"
edition = "2021"
description = "Rate-limit auto-resumer for AI CLIs in tmux"
license = "GPL-3.0-or-later"

[[bin]]
name = "nudge"
path = "src/main.rs"

[lib]
name = "nudge"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
strip-ansi-escapes = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
plist = "1"
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
