[package]
name = "nudge"
# Load-bearing, not release hygiene: `crate::VERSION` is this string, and the
# CLI/daemon handshake adopts any resident daemon reporting the same one. 0.1.0
# predates `JobSpec::verify_fingerprint`/`verify_dims`, which serde drops
# silently from a Schedule it does not know — so a 0.1.0 daemon adopted by this
# build would run the old banner-only `--verify` and report success doing it.
# Bump this whenever the IPC wire format or the daemon's behavior changes.
# 0.2.0 predates the weekly banner. run_injection calls detect_reset at fire
# time, so a 0.2.0 daemon adopted by this build would not recognize a weekly
# banner, would report SkippedNoBanner, and the nudge would silently never
# fire -- the failure this comment exists to prevent, via a path that is not
# the wire format.
# 0.4.0 adds the client-side TUI dashboard: no wire/daemon change, so this bump
# is a feature marker, not compat-load-bearing like the ones above.
version = "0.4.0"
edition = "2021"
description = "Rate-limit auto-resumer for AI CLIs in tmux"
license = "GPL-3.0-or-later"

[[bin]]
name = "nudge"
path = "src/main.rs"

[lib]
name = "nudge"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
strip-ansi-escapes = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
plist = "1"
notify-rust = "4"
inquire = "0.7"
fs4 = "0.13"
ratatui = "0.30.2"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3"
